manh up code tra hang

--- a/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
@@ -5,33 +5,34 @@
 </h4>
 
 <div class="row">
-    <div class="col-md-6 col-lg-3 mb-4 ">
-        <div class="card h-100 border-success" style="border-left: 5px solid;">
-            <div class="card-header d-flex align-items-center justify-content-between pb-0 text-uppercase text-success ">
-                Doanh thu ngày
-            </div>
-            <div class="card-body fw-bold">
-                20.000.000 <u>đ</u>
-            </div>
-        </div>
-    </div>
+
     <div class="col-md-6 col-lg-3 mb-4">
         <div class="card h-100 border-primary" style="border-left: 5px solid">
             <div class="card-header d-flex align-items-center justify-content-between pb-0 text-uppercase text-primary">
                 Tổng đơn hàng
             </div>
             <div class="card-body" >
-                <button class="fw-bold" id="completed" style="border : none" ></button>
+                <button class="fw-bold" id="completed" style="border : none" th:text="${#lists.size(billAll)}" th:onclick="|showData()|" ></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-3 mb-4 ">
+        <div class="card h-100 border-success" style="border-left: 5px solid;">
+            <div class="card-header d-flex align-items-center justify-content-between pb-0 text-uppercase text-success ">
+                Đơn hàng đang giao
+            </div>
+            <div class="card-body" >
+                <button class="fw-bold" id="delivering" style="border : none" th:text="${#lists.size(billDelivering)}" th:onclick="|showData4()|" ></button>
             </div>
         </div>
     </div>
     <div class="col-md-6 col-lg-3 mb-4">
         <div class="card h-100 border-warning" style="border-left: 5px solid">
             <div class="card-header d-flex align-items-center justify-content-between pb-0 text-uppercase text-warning">
-                Đơn hoàn trả
+                Đơn yêu cầu hoàn trả
             </div>
             <div class="card-body">
-                <span class="fw-bold" id="return"></span>
+                <button class="fw-bold" id="return" style="border : none" th:text="${#lists.size(billReturn)}" th:onclick="|showData2()|"></button>
             </div>
         </div>
     </div>
@@ -41,58 +42,130 @@
                 Đơn chờ xử lý
             </div>
             <div class="card-body">
-                <span class="fw-bold" id="processing"></span>
+                <button class="fw-bold" id="processing" style="border : none" th:text="${#lists.size(billProcessing)}" th:onclick="|showData3()|" ></button>
             </div>
         </div>
     </div>
 </div>
+<div class="overflow-auto" id="myDiv">
+    <table class="table table-hover table-bordered overflow-hidden" style="display: none;" id="myTable4" >
+        <thead>
+        <tr class="row-table">
+            <th>#</th>
+            <th>Code bill</th>
+            <th>Name</th>
+            <th>Phone number</th>
+            <th>Time create</th>
+            <th>Payment Status</th>
+            <th>Bill Status</th>
+        </tr>
+        </thead>
+        <tbody class="table-border-bottom-0">
+        <tr th:each="listBill,billStat: ${billDelivering}" th:onclick="|oncl(${ listBill.id })|">
+            <td>
+                <strong>[(${billStat.index+1})]</strong>
+            </td>
+            <td>[(${listBill.code})]</td>
+            <td>
+                [(${listBill.customer.name})]
+            </td>
+            <td>[(${listBill.customer.phoneNumber})]</td>
+            <td>[(${listBill.createDate})]</td>
+            <td th:text="${listBill.paymentStatus == 1 ? 'Đã thanh toán' : listBill.paymentStatus == 2 ? 'Chưa thanh toán' : 'Đã hoàn tiền'}"></td>
+            <td>[(${listBill.billStatus.status})]</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="overflow-auto" id="myDiv2">
+    <table class="table table-hover table-bordered overflow-hidden" style="display: none;" id="myTable" >
+        <thead>
+        <tr class="row-table">
+            <th>#</th>
+            <th>Code bill</th>
+            <th>Name</th>
+            <th>Phone number</th>
+            <th>Time create</th>
+            <th>Payment Status</th>
+            <th>Bill Status</th>
+        </tr>
+        </thead>
+        <tbody class="table-border-bottom-0">
+        <tr th:each="listBill,billStat: ${billAll}" th:onclick="|oncl(${ listBill.id })|">
+            <td>
+                <strong>[(${billStat.index+1})]</strong>
+            </td>
+            <td>[(${listBill.code})]</td>
+            <td>
+                [(${listBill.customer.name})]
+            </td>
+            <td>[(${listBill.customer.phoneNumber})]</td>
+            <td>[(${listBill.createDate})]</td>
+            <td th:text="${listBill.paymentStatus == 1 ? 'Đã thanh toán' : listBill.paymentStatus == 2 ? 'Chưa thanh toán' : 'Đã hoàn tiền'}"></td>
+            <td>[(${listBill.billStatus.status})]</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="overflow-auto" id="myDiv3">
+    <table class="table table-hover table-bordered overflow-hidden" style="display: none;" id="myTable2" >
+        <thead>
+        <tr class="row-table">
+            <th>#</th>
+            <th>Code bill</th>
+            <th>Name</th>
+            <th>Phone number</th>
+            <th>Time create</th>
+            <th>Payment Status</th>
+            <th>Bill Status</th>
+        </tr>
+        </thead>
+        <tbody class="table-border-bottom-0">
+        <tr th:each="listBill,billStat: ${billReturn}" th:onclick="|oncl(${ listBill.id })|">
+            <td>
+                <strong>[(${billStat.index+1})]</strong>
+            </td>
+            <td>[(${listBill.code})]</td>
+            <td>
+                [(${listBill.customer.name})]
+            </td>
+            <td>[(${listBill.customer.phoneNumber})]</td>
+            <td>[(${listBill.createDate})]</td>
+            <td th:text="${listBill.paymentStatus == 1 ? 'Đã thanh toán' : listBill.paymentStatus == 2 ? 'Chưa thanh toán' : 'Đã hoàn tiền'}"></td>
+            <td>[(${listBill.billStatus.status})]</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="overflow-auto" id="myDiv4">
+    <table class="table table-hover table-bordered overflow-hidden" style="display: none;" id="myTable3" >
+        <thead>
+        <tr class="row-table">
+            <th>#</th>
+            <th>Code bill</th>
+            <th>Name</th>
+            <th>Phone number</th>
+            <th>Time create</th>
+            <th>Payment Status</th>
+            <th>Bill Status</th>
+        </tr>
+        </thead>
+        <tbody class="table-border-bottom-0">
+        <tr th:each="listBill,billStat: ${billProcessing}" th:onclick="|oncl(${ listBill.id })|">
+            <td>
+                <strong>[(${billStat.index+1})]</strong>
+            </td>
+            <td>[(${listBill.code})]</td>
+            <td>
+                [(${listBill.customer.name})]
+            </td>
+            <td>[(${listBill.customer.phoneNumber})]</td>
+            <td>[(${listBill.createDate})]</td>
+            <td th:text="${listBill.paymentStatus == 1 ? 'Đã thanh toán' : listBill.paymentStatus == 2 ? 'Chưa thanh toán' : 'Đã hoàn tiền'}"></td>
+            <td>[(${listBill.billStatus.status})]</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
-<script>
-    $("#completed").click(function (){
-        var date = $("#date").val();
-        window.location.href = "http://localhost:8080/admin/bill/list_bill?billStatus=WP&date=2023/11/01-2023/11/02"
-
-    })
-    function click(){
-        window.location.href = "http://localhost:8080/admin/bill/list_bill"
-    }
-    $(document).ready(function () {
-        $("#date").change(function () {
-            var date = $(this).val();
-            $.ajax({
-                url: "/admin/dashboard/list",
-                type: "GET",
-                dataType: "json",
-                data: {
-                    date: date
-                },
-                success: function (myData) {
-                    console.log(myData)
-                    $("#completed").text(myData.length);
-                }
-            })
-            $.ajax({
-                url: "/admin/dashboard/listReturn",
-                type: "GET",
-                dataType: "json",
-                data: {
-                    date: date
-                },
-                success: function (DataReturn) {
-                    $("#return").text(DataReturn.length);
-                }
-            });
-            $.ajax({
-                url: "/admin/dashboard/listProcessing",
-                type: "GET",
-                dataType: "json",
-                data: {
-                    date: date
-                },
-                success: function (DataProcessing) {
-                    $("#processing").text(DataProcessing.length);
-                }
-            });
-        });
-    });
-</script>
+<script th:src="@{/admin/plugin/js/dashboard.js}"></script>
