--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -14,7 +14,7 @@
     <ul class="menu-inner py-1 " style="padding-bottom:100px !important;">
         <!-- Dashboard -->
         <li th:class="${#strings.equals(session.active,'/dashboard')?'menu-item active':'menu-item'}">
-            <a th:href="@{/admin/dashboard}" class="menu-link">
+            <a th:href="@{/admin}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
                 <div th:text="#{sidebar.dashboard}"></div>
             </a>
