--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
@@ -1,10 +1,11 @@
+
 <section class="mt-4 ">
     <div class="mb-2">
         <div>
-            <span class="fs-5">Chi tiết đơn hàng #09398490923 - <span class="text-success">đã nhận hàng</span></span>
+            <span class="fs-5">Chi tiết đơn hàng #[(${bill.code})] - <span class="text-success" th:text="${bill.billStatus.status}"></span></span>
         </div>
         <div>
-            <span>Ngày đặt: 10/10/2023</span>
+            <span>Ngày đặt:[(${bill.createDate})]</span>
         </div>
     </div>
     <div class="row">
@@ -18,13 +19,13 @@
                         </div>
                         <div class="row mb-2">
                             <span class="col-sm-4">Người nhận</span><span
-                                class="col-sm-8"> Phạm Đức Oanh - 093894839943</span>
+                                class="col-sm-8"> [(${bill.deliveryNotes[0]?.received})] - [(${bill.deliveryNotes[0]?.receiverPhone})]</span>
                         </div>
                         <div class="row mb-2">
-                            <span class="col-sm-4">Địa chỉ:</span><span class="col-sm-8"> Liên Trì 1, xã yên Hòa, huyện Yên Mô, tỉnh Ninh Bình</span>
+                            <span class="col-sm-4">Địa chỉ:</span><span class="col-sm-8">[(${bill.deliveryNotes[0]?.receivingAddress})]</span>
                         </div>
                         <div class="row mb-2">
-                            <span class="col-sm-4">Ngày nhận: </span><span class="col-sm-8"> 10-10-2023</span>
+                            <span class="col-sm-4">Ngày nhận: </span><span class="col-sm-8">[(${bill.deliveryNotes[0]?.receivedDate})]</span>
                         </div>
                     </div>
                 </div>
@@ -37,7 +38,7 @@
                             <span class="fs-5 text-uppercase">Hình thức thanh toán:</span>
                         </div>
                         <div class="row mb-2">
-                            <span> Thanh toán khi nhận hàng</span>
+                            <span th:text="${bill.paymentMethod.paymentMethod}"></span>
                         </div>
                     </div>
                 </div>
@@ -51,58 +52,166 @@
                             <i class='bx bx-shopping-bag'></i>
                             <span class="fs-5 text-uppercase"> Thông tin sản phẩm</span>
                         </div>
-                        <div class="row mb-3">
+                        <div class="row mb-3" th:each="billProduct : ${billProducts}">
                             <div class="col-sm-2">
                                 <img class="w-100" src="/image/smart-tivi-toshiba-43-inch-43v31mp-02.jpg">
                             </div>
                             <div class="col-sm-7">
                                 <div class="mb-2">
-                                    <span>Ốp lưng Xiaomi Poco C40 Nhựa dẻo Shockproof TPU JM Trong</span></div>
+                                    <span th:text="${billProduct?.product.name}"></span></div>
                                 <div class="mb-2">
-                                    <span>Số lượng: 1</span></div>
+                                    <span>Số lượng: [(${billProduct.quantity})]</span></div>
                             </div>
                             <div class="col-sm-3 text-end">
                                 <div>
-                                    <span>1090090909</span><span class="fs-tiny text-decoration-underline">đ</span>
+                                    <span class="text-strike-through">[(${#numbers.formatDecimal(billProduct.product.price_export,0,'COMMA',0,'POINT')})]</span>
+                                    <span class="fs-tiny text-decoration-underline">đ</span>
                                 </div>
-                                <div><span class="text-strike-through">100000</span><span
-                                        class="fs-tiny text-decoration-underline">đ</span></div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row mb-3">
-                            <div class="col-sm-2">
-                                <img class="w-100" src="/image/smart-tivi-toshiba-43-inch-43v31mp-02.jpg">
-                            </div>
-                            <div class="col-sm-7">
-                                <div class="mb-2">
-                                    <span>Ốp lưng Xiaomi Poco C40 Nhựa dẻo Shockproof TPU JM Trong</span></div>
-                                <div class="mb-2">
-                                    <span>Số lượng: 1</span></div>
-                            </div>
-                            <div class="col-sm-3 text-end">
                                 <div>
-                                    <span>1090090909</span><span class="fs-tiny text-decoration-underline">đ</span>
+                                    <span>[(${#numbers.formatDecimal(billProduct.product.price_export,0,'COMMA',0,'POINT')})]</span>
+                                    <span class="fs-tiny text-decoration-underline">đ</span>
                                 </div>
-                                <div><span class="text-strike-through">100000</span><span
-                                        class="fs-tiny text-decoration-underline">đ</span></div>
                             </div>
+                            <div class="text-end mb-3">
+                                <div th:if="${bill.billStatus.code== 'CO'}">
+                                    <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+                                            th:data-bs-target="|#modal${billProduct.id}|">Trả hàng
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="modal fade" th:id="|modal${billProduct.id}|" tabindex="-1"
+                                 aria-hidden="true">
+                                <div class="modal-dialog modal-xl" role="document">
+                                    <div class="modal-content">
+                                        <form th:action="@{/return/{id}(id=${billProduct.id})}" th:object="${returndto}"
+                                              method="post" enctype="multipart/form-data">
+                                            <div class="modal-header">
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                            </div>
+                                            <input type="text" th:value="${bill.id}" hidden="true" th:name="idBill">
+                                            <h4 style="color: black" class="px-3"> Thông tin trả hàng</h4>
+                                            <div class="table-responsive text-nowrap">
+                                                <table class="table table-bordered">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>
+                                                            <input type="checkbox">
+                                                        </th>
+                                                        <th>Tên sản phẩm</th>
+                                                        <th>Số lượng</th>
+                                                        <th>Lí do</th>
+                                                        <th>Ảnh trả hàng</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr th:each="billProduct : ${bill.billProducts}">
+                                                        <td>
+                                                            <input type="checkbox" readonly="readonly">
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" th:name="productName"
+                                                                   th:value="${billProduct.product.name}">
+                                                        </td>
+                                                        <td>
+                                                            <input type="number" class="quantityReturn" value="0"
+                                                                   th:name="quantityReturn" max="3">
+                                                        </td>
+                                                        <td>
+                                                                <textarea name="" id="" cols=""
+                                                                          rows="2" th:name="reason"></textarea>
+                                                        </td>
+                                                        <td>
+                                                            <ul class="list-unstyled users-list avatar-group m-0 d-flex align-items-center">
+                                                                <li data-bs-toggle="tooltip"
+                                                                    data-popup="tooltip-custom"
+                                                                    data-bs-placement="bottom"
+                                                                    class="avatar avatar-xl pull-up border-dark border"
+                                                                    data-bs-offset="0,4" data-bs-html="true"
+                                                                    title=""
+                                                                    data-bs-original-title="<span>Ảnh chính</span>">
+                                                                    <img src="/image/smart-tivi-toshiba-43-inch-43v31mp-01.jpg"
+                                                                         alt="Avatar"
+                                                                         class="image-preview">
+                                                                    <input type="file" multiple name="return-images"
+                                                                           hidden
+                                                                           class="file-input">
+                                                                </li>
+                                                                <li data-bs-toggle="tooltip"
+                                                                    data-popup="tooltip-custom"
+                                                                    data-bs-placement="bottom"
+                                                                    class="avatar avatar-xl pull-up border-dark border"
+                                                                    data-bs-offset="0,4" data-bs-html="true"
+                                                                    title=""
+                                                                    data-bs-original-title="<span>Ảnh phụ</span>">
+                                                                    <img src="/image/smart-tivi-toshiba-43-inch-43v31mp-01.jpg"
+                                                                         alt="Avatar"
+                                                                         class="image-preview">
+                                                                    <input type="file" multiple name="return-images"
+                                                                           hidden
+                                                                           class="file-input">
+                                                                </li>
+                                                                <li data-bs-toggle="tooltip"
+                                                                    data-popup="tooltip-custom"
+                                                                    data-bs-placement="bottom"
+                                                                    class="avatar avatar-xl pull-up border-dark border"
+                                                                    title=""
+                                                                    data-bs-offset="0,4" data-bs-html="true"
+                                                                    data-bs-original-title="<span>Ảnh phụ</span>">
+                                                                    <img src="/image/smart-tivi-toshiba-43-inch-43v31mp-01.jpg"
+                                                                         alt="Avatar"
+                                                                         class="image-preview">
+                                                                    <input type="file" multiple name="return-images"
+                                                                           hidden
+                                                                           class="file-input">
+                                                                </li>
+                                                            </ul>
+                                                        </td>
+
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                            <div class="mb-3 text-center">
+                                                <button type="submit" class="btn btn-primary">
+                                                    <a class="px-3 text-end">Hoàn tất</a>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
                         </div>
                         <hr>
                         <div class="mb-3">
-                            <div class="mb-3 row">
-                                <span class="col-sm-4">Tổng tiền:</span>
-                                <span class="col-sm-8">1092049090984 <span
-                                        class="text-decoration-underline fs-tiny">đ</span></span>
+                            <div class="mb-3 row text-end">
+                                <span class="col-sm-10 ">Tổng tiền:</span>
+                                <span class="col-sm-2 ">
+                                [(${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')})]
+                                    <span class="text-decoration-underline fs-tiny">đ</span>
+                                </span>
+
                             </div>
-                            <div class="mb-3 row">
-                                <span class="col-sm-4 fw-semibold">Đã thanh toán:</span>
-                                <span class="col-sm-8">1092049090984 <span
-                                        class="text-decoration-underline fs-tiny">đ</span></span>
+                            <div class="mb-3 row text-end">
+                                <span class="col-sm-10 ">Voucher:</span>
+                                <span class="col-sm-2">1000
+                                    <span class="text-decoration-underline fs-tiny">đ</span>
+                                </span>
+                            </div>
+                            <hr>
+                            <div class="mb-3 row text-end">
+                                <span class="col-sm-10 fw-semibold ">Thanh toán:</span>
+                                <span class="col-sm-2">
+                                    [(${#numbers.formatDecimal(total-1000,0,'COMMA',0,'POINT')})]
+                                      <span class="text-decoration-underline fs-tiny">đ</span>
+                                </span>
+
                             </div>
                         </div>
                         <div class="text-center mt-2">
-                            <button class="btn btn-outline-dark">Về danh sách đơn hàng</button>
+                            <a type="button" class="btn btn-outline-dark" href="/order">Về danh sách đơn hàng</a>
                         </div>
                     </div>
                 </div>
@@ -110,3 +219,16 @@
         </div>
     </div>
 </section>
+<script>
+    const productAIncrementBtn = document.getElementsByClassName('quantityReturn');
+    $.each(productAIncrementBtn, function (index, item) {
+        item.addEventListener('keydown', (event) => {
+             if(event.target.value>event.target.getAttribute("max")){
+                 item.value=item.getAttribute("max")
+             }
+        })
+    })
+
+
+</script>
+<script src="/admin/plugin/js/loadImage.js"></script>
