--- a/webBanTiVi/src/main/resources/templates/user/page/profile/profile.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/profile.html
@@ -28,10 +28,12 @@
                     </button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link pb-3 pt-3 fs-5" role="tab" data-bs-toggle="tab"
-                            data-bs-target="#navs-top-profile" aria-controls="navs-top-profile" aria-selected="true">
+                    <a  class="nav-link pb-3 pt-3 fs-5" role="tab"
+                          aria-controls="navs-top-profile"
+                    th:href="@{/order}"
+                    >
                         Đơn hàng của bạn
-                    </button>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a type="button" class="nav-link pb-3 pt-35 fs-5" href="/logout"
@@ -44,9 +46,9 @@
                 <div class="tab-pane fade show active" id="navs-top-home" role="tabpanel">
                     <form>
                         <div class="row mb-3">
-                            <label class="col-sm-2 col-form-label" >Họ và tên</label>
+                            <label class="col-sm-2 col-form-label">Họ và tên</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control"  placeholder="Họ tên"
+                                <input type="text" class="form-control" placeholder="Họ tên"
                                        th:name="name"
                                        th:value="${#authentication.principal.name}">
                             </div>
@@ -116,7 +118,8 @@
                             <div class="col-sm-10">
                                 <div class="input-group input-group-merge form-password-toggle">
                                     <input type="text" th:name="password" class="form-control" id="passNew"
-                                         >
+                                           placeholder="············"
+                                    >
                                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                                 </div>
                             </div>
@@ -138,83 +141,6 @@
                             </button>
                         </div>
                     </form>
-                </div>
-                <div class="tab-pane fade" id="navs-top-profile" role="tabpanel">
-                    <h4>Đơn hàng đang mua</h4>
-                    <div class="mb-4 mx-4">
-                        <div class="mb-3 row order">
-                            <div class="row mt-3">
-                                <span class="text-start col-sm-6">Mã đơn: #9389eudj93</span>
-                                <span class="text-end col-sm-6">Đang giao hàng</span>
-                                <hr>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <img class="w-25 d-inline"
-                                         src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
-                                    <img class="w-25 d-inline"
-                                         src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
-                                    <span class="d-inline-flex">Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh</span>
-                                </div>
-                                <span class="col-sm-6 text-end ">
-                            Tổng tiền: <span class="fs-4 position-relative">1234566 </span><span
-                                        class="text-decoration-underline fs-6">đ</span>
-                        </span>
-                                <div class="text-end mb-3">
-                                    <button class="btn btn-outline-dark">Xem chi tiết</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mb-3 row order">
-                            <div class="row mt-3">
-                                <span class="text-start col-sm-6">Mã đơn: #9389eudj93</span>
-                                <span class="text-end col-sm-6">Đang giao hàng</span>
-                                <hr>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <img class="w-25 d-inline"
-                                         src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
-                                    <img class="w-25 d-inline"
-                                         src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
-                                    <span class="d-inline-flex">Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh</span>
-                                </div>
-                                <span class="col-sm-6 text-end ">
-                            Tổng tiền: <span class="fs-4 position-relative">1234566 </span><span
-                                        class="text-decoration-underline fs-6">đ</span>
-                        </span>
-                                <div class="text-end mb-3">
-                                    <button class="btn btn-outline-dark">Xem chi tiết</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <h4>Đơn hàng hoàn thành</h4>
-                    <div class="mb-4 mx-4">
-                        <div class="mb-3 row order">
-                            <div class="row mt-3">
-                                <span class="text-start col-sm-6">Mã đơn: #9389eudj93</span>
-                                <span class="text-end col-sm-6">Đã hoàn thành</span>
-                                <hr>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <img class="w-25 d-inline"
-                                         src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
-                                    <img class="w-25 d-inline"
-                                         src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
-                                    <span class="d-inline-flex">Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh</span>
-                                </div>
-                                <span class="col-sm-6 text-end ">
-                            Tổng tiền: <span class="fs-4 position-relative">1234566 </span><span
-                                        class="text-decoration-underline fs-6">đ</span>
-                        </span>
-                                <div class="text-end mb-3">
-                                    <button class="btn btn-outline-dark">Xem chi tiết</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
