--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -56,9 +56,9 @@
         <div class="content-wrapper">
             <div class="container-xxl flex-grow-1 container-p-y">
                 <div class="content-wrapper">
-                    <form th:action="@{/create_bill}" method="post" th:object="${billProduct}">
+                    <form th:action="@{/purchase}" method="post" th:object="${billProduct}">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 mb-5">
                                 <div class="card mb-4">
                                     <span class="card-header"><span class="fs-5">THÔNG TIN KHÁCH HÀNG</span></span>
                                     <div class="card-body" th:id="add">
@@ -93,10 +93,7 @@
                                                        id="address" th:name="address">
                                             </div>
                                         </div>
-                                        <hr>
                                         <div class="col-lg-12"><br>
-
-                                            <!--                                                        <div class="">-->
                                             <table class="table table-borderless">
                                                 <thead>
                                                 <tr>
@@ -109,17 +106,20 @@
                                                 </thead>
                                                 <tbody>
                                                 <tr th:each="item:${session.list}">
+                                                    <input th:value="${item.product.id}" name="id" hidden>
                                                     <td>
-                                                        <input th:value="${item.product.id}" name="product"
-                                                               hidden>
                                                         <div th:each="image:${item.product.listImage}">
-                                                            <div th:if="${image.location == true}">
-                                                                <img th:src="@{'/user/img/shopping-cart/'+image.nameImage}"
-                                                                     alt="">
-                                                            </div>
-                                                            <span th:text="${item.product.name + ' '+item.product.code}"></span>
+                                                            <!--                                                        <div>-->
+                                                            <img th:if="${image.location == true}"
+                                                                 th:src="@{'/image/'+${image.nameImage}}"
+                                                                 alt="" width="100px">
+                                                            <!--                                                        </div>-->
                                                         </div>
+                                                        <span th:text="${item.product.name + ' '+item.product.code}"></span>
                                                     </td>
+                                                    <!--                                                    <td>-->
+
+                                                    <!--                                                    </td>-->
                                                     <td>
                                                         <div>
                                                             <span class="fs-5">$<span class="price-export"
@@ -129,13 +129,12 @@
                                                         </div>
                                                     </td>
                                                     <td>
-                                                        <div class="buttons_added"
-                                                             th:id="${item.product.id}">
+                                                        <div class="buttons_added" th:id="${item.product.id}">
                                                             <input class="minus is-form" type="button"
                                                                    value="-">
-                                                            <input aria-label="quantity"
-                                                                   class="input-qty" max="10" min="1"
-                                                                   name="quantity"
+                                                            <input aria-label="quantity" class="input-qty" max="10"
+                                                                   min="1"
+                                                                   name="qty"
                                                                    type="number"
                                                                    th:value="${item.quantity}">
                                                             <input class="plus is-form plus"
@@ -143,28 +142,25 @@
                                                         </div>
                                                     </td>
                                                     <td>
-                                                    <span th:text="${item.product.price_export * item.quantity}"
-                                                          class="total-price"></span>
+                                                        <span class="fs-5">
+                                                             <span th:text="${item.product.price_export * item.quantity}"
+                                                                   class="total-price"></span>
+                                                        </span>
                                                     </td>
                                                 </tr>
-                                                <!--                                                                <hr>-->
+                                                <hr>
                                                 </tbody>
                                             </table>
-                                            <!--                                                        </div>-->
-                                            <!--                                                        <hr>-->
-                                            <!--                                                        <div class="row">-->
                                             <div class=" col-lg-6 col-md-6 col-sm-6">
                                                 <button type="submit" class="btn btn-lg btn-primary">Cập
                                                     Nhật Giỏ Hàng
                                                 </button>
                                             </div>
-                                            <!--                                                        </div>-->
-                                            <!--                                            <hr>-->
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 mb-5">
                                 <div class="card mb-4">
                                     <!--                                            Phuong thuc thanh toan-->
                                     <div class="card-header">
