--- a/webBanTiVi/src/main/resources/templates/login/login.html
+++ b/webBanTiVi/src/main/resources/templates/login/login.html
@@ -36,7 +36,7 @@
         <ul class="header-nav-list">
             <li class="header-nav-item">Hệ thống cửa hàng tivi</li>
             <li class="header-nav-item">
-                <a class="header-nav-item-link" href="/">LOGO</a>
+                <a class="header-nav-item-link" href="/user">LOGO</a>
             </li>
         </ul>
 
@@ -45,7 +45,7 @@
                 <a href="#" class="header-nav-item-link">HỎI ĐÁP</a>
             </li>
             <li class="header-nav-item">
-                <a href="/" class="header-nav-item-link">QUAY LẠI</a>
+                <a href="/user" class="header-nav-item-link">QUAY LẠI</a>
             </li>
         </ul>
     </nav>
