--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -103,10 +103,10 @@
                         <a class="nav-link active page" aria-current="page" href="/">Trang chủ</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="/product/tivi">Tivi</a>
+                        <a class="nav-link page" href="/tivi">Tivi</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="/product/accessory">Phụ kiện</a>
+                        <a class="nav-link page" href="/accessory">Phụ kiện</a>
                     </li>
                     <li class="nav-item mx-3">
                         <a class="nav-link page" href="/invoice">Đơn hàng</a>
