--- a/webBanTiVi/src/main/resources/templates/login/login.html
+++ b/webBanTiVi/src/main/resources/templates/login/login.html
@@ -84,7 +84,7 @@
                         <div class="mb-3 form-password-toggle">
                             <div class="d-flex justify-content-between">
                                 <label class="form-label" >Mật khẩu</label>
-                                <a href="/forgot-password">
+                                <a href="/login/forgot-password">
                                     <small>Quên mật khẩu?</small>
                                 </a>
                             </div>
