--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -8,7 +8,8 @@
     <meta name="description" content=""/>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" th:href="@{/image/logobig6-03.png}"/>
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap"
+          rel="stylesheet">
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/fonts/boxicons.css}"/>
 
@@ -16,13 +17,15 @@
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/theme-default.css}"/>
     <link rel="stylesheet" th:href="@{/admin/assets/css/demo.css}"/>
     <link rel="stylesheet" th:href="@{/admin/assets/css/select2.css}"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/css/sweetalert2.min.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
 
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/select2-plugin.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/bill.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/dashbroad.css}">
+
     <!-- Helpers -->
     <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
     <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
@@ -33,7 +36,7 @@
     <div class="layout-container">
         <aside th:replace="~{/admin/layout/_sidebar.html}">
         </aside>
-        <div class="layout-page" >
+        <div class="layout-page">
             <div th:replace="~{/admin/layout/_navbar.html}">
             </div>
             <div class="content-wrapper">
@@ -54,9 +57,9 @@
 <script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>
 <script th:src="@{/admin/assets/js/select2.min.js}"></script>
 <script th:src="@{/admin/assets/vendor/js/menu.js}"></script>
+<script th:src="@{/admin/assets/js/sweetalert2.min.js}"></script>
 
 <!-- end build -->
-
 <!-- Main JS -->
 <script th:src="@{/admin/assets/js/main.js}"></script>
 
@@ -65,9 +68,9 @@
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
-end date range picker
 <!-- Page JS -->
 <script th:src="@{/admin/assets/js/pages-account-settings-account.js}"></script>
+
 
 <script th:src="@{/admin/plugin/js/date_picker_order.js}"></script>
 
