--- a/webBanTiVi/src/main/resources/templates/user/page/promotion/voucherdetail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/promotion/voucherdetail.html
@@ -10,7 +10,7 @@
         </div>
         <p>Chương trình bắt đầu: [(${voucher.getStartDay()})] - Kết thúc: [(${voucher.getExpirationDate()})]</p>
         <hr>
-        <img th:src="@{'/image/' + *{voucher.getAvatar()}}" width="1000 px" height="auto" style="text-align: center">
+        <img th:src="@{'/image/' + *{voucher.getImage()}}" width="1000 px" height="auto" style="text-align: center">
         <hr>
         <p class="text-danger fs-large fw-bold">Giảm ngay [(${voucher.getValue()})]<span th:if="${voucher.isReducedForm()==true}" th:text="đ" />
             <span th:if="${voucher.isReducedForm()==fasle}" th:text="%" />
@@ -19,9 +19,42 @@
             trở lên, Giảm theo % có giá trị tối đa [(${voucher.getMaximumDiscount().intValue()})]đ</p>
         <hr>
         <h3>Số lượng có hạn: chỉ [(${voucher.getQuantity()})] voucher</h3>
-        <a th:href="@{'/promotion/vouchercode/' + *{voucher.getId()}}"
-           class="btn btn-outline-danger">LẤY MÃ NGAY</a>
+        <a type="button"
+           class="btn btn-outline-danger" data-bs-toggle="modal"
+           data-bs-target="#modalVoucher">LẤY MÃ NGAY</a>
+<!--        th:href="@{'/promotion/vouchercode/' + *{voucher.getId()}}"-->
+        <div class="modal" th:id="modalVoucher"
+        >
+            <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <br>
+                <div class="modal-header">
+                </div>
+                <div th:if="${check == true}" class="modal-body">
+                    <p class=" fs-large fw-bold text-center">
+                        Mã voucher của bạn là: <span class="text-danger">
+                [(${voucher.getCode()})]
+            </span>
+                    </p>
+                    <p class="text-center">Quý khách chỉ được sử dụng voucher cho một hóa đơn duy nhất.</p>
+                    <p class="text-center">Mã voucher sẽ tự động nhập vào hóa đơn gần nhất để giảm tiền theo khuyến mại!</p>
+                </div>
+                <div th:if="${check == false && check2 == false}">
+                    <p class=" fs-large fw-bold text-center">[(${thongbao})]</p>
+                </div>
+                <div th:if="${check == false && check2 == true}">
+                    <p class=" fs-large fw-bold text-center">
+                        Mã voucher của bạn là: <span class="text-danger">
+                [(${voucher.getCode()})]
+            </span>
+                    </p>
+                    <p class="text-center">Bạn đã nhận mã voucher 1 lần. <br>
+                        [(${thongbao})]</p>
+                </div>
+                <div class="modal-footer">
+                </div>
             </div>
+            </div>
+        </div>
+    </div>
 </section>
-
-
